fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -6,33 +6,30 @@
 
 /* Main Style */
 
-.container, .nav {
-    display: flex; 
-    flex-direction: column; 
+.container, .profile-container {
     background: #fafafa;
 }
 
 .container {
     padding-top: 2em;
+
 }
 
 .student-name {
-    align-self: center;
+    text-align: center;
     color: #6c7075;
 }
-
 .nav {
-    margin-top: 1.5em;
+    margin: 0;
+    padding: 0;
 }
-
 .nav a {
     display: block;
     color: #52483f;
     font-size: 1.125em;
     font-weight: 300;
     text-align: center;
-    padding: .4em;  
-    background-color: white;
+    padding: .4em;
     text-decoration: none;
 }
 
@@ -42,7 +39,6 @@
 
 ul {
     list-style-type: none;
-    padding: 10px;
 }
 li {
     padding: 3px;
@@ -68,9 +64,8 @@ h3 {
     text-align: center;
     color: #52483f;
 }
-
-.portfolio-container img{
-    width: 50%;
+img {
+    width: 100%;
 }
 
 .portfolio-container h4, p {
@@ -110,14 +105,18 @@ h3 {
 /* Tablet media query */
 @media (min-width: 768px) {
 /* header styles */
-    .container, .nav {
-        background: #fafafa;
+    .nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
     }
-    
-    .profile-container {
+  .profile-container {
         display: flex;
         flex-direction: row-reverse;
         justify-content: space-between;
+
     }
     .description {
         text-align: left;
@@ -158,11 +157,13 @@ h3 {
 @media (min-width: 1024px) {
     .container {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        background: #fafafa;
-        color: #6c7075;
-    } 
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .nav {
+        display: flex;
+        flex-direction: row;
+    }
     .pages {
     }
     .pages div {
